Closed Bug 155272 Opened 22 years ago Closed 22 years ago

History does not update as you load pages

Categories

(Camino Graveyard :: History, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: sfraser_bugs, Assigned: sfraser_bugs)

Details

Attachments

(1 file, 1 obsolete file)

Spun off from bug 154297 -- history needs to have an observer and update when
pages get loaded.
Attached patch Moving patch from bug 154297 (obsolete) — Splinter Review
This is an updated patch made from the tree as of 08/04. It also fixes a memory
leak. This patch invalidate the previous one (which I can't obsolete for some
reasons).
Comment on attachment 89850 [details] [diff] [review]
Moving patch from bug 154297

Obsoleting per comment 2.
Attachment #89850 - Attachment is obsolete: true
Keywords: patch, review
Any reason this isn't checked in? Does it work correctly?
I just haven't had time to look at it. I want to get it in.
Status: NEW → ASSIGNED
landed a slightly modified version of this patch that refactors a couple of
things and doesn't actually init the history rdf stuff until the panel is
clicked on (rather than in awakeFromNib).
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
QA Contact: winnie → sairuh
vrfy'd fixed on 10.2.2 with 2002.11.19.11.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: