Fix history code so that it updates correctly as you load pages. History observers and data sources are only initialized when the panel is displayed. (bug 155272)